# pm

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  db.py  mailer.py  main.py  observability.py  schemas.py  security.py
backend/app/static/: index.html
backend/tests/: test_ai.py  test_ai_chat.py  test_auth_security.py  test_board_api.py  test_db.py  test_mailer.py  test_main.py  test_scripts_smoke.py
data/: app.db
docs/: AWS_DEPLOY_RUNBOOK.md  AZURE_DEPLOY_RUNBOOK.md  DB_SCHEMA.md  GCP_DEPLOY_RUNBOOK.md  PLAN.md
frontend/: AGENTS.md  next-env.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: api.test.ts  api.ts  globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
scripts/: AGENTS.md  start-mac.sh  start-windows.bat  stop-linux.sh  stop-windows.bat  verify-part2-linux.sh  verify-part2-windows.bat  verify-part3-linux.sh  verify-part3-windows.bat
scripts/aws/: deploy-ecs-windows.ps1  service.template.json  taskdef.template.json
