[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "itsdangerous>=2.2.0",
  "httpx>=0.28.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "pytest-cov>=6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
